# k8s.webhook/cmd/user-management/docs/swagger.json
@@ -697,11 +697,13 @@
                 "summary": "Create a user",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "user name",
+                        "description": "dto",
                         "name": "user",
-                        "in": "path",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserDTO"
+                        }
                     }
                 ],
                 "responses": {
@@ -925,6 +927,19 @@
                 "user": {
                     "type": "string",
                     "example": "user1"
+                }
+            }
+        },
+        "service.RoleMemberService": {
+            "type": "object",
+            "properties": {
+                "group": {
+                    "type": "string",
+                    "example": "dev"
+                },
+                "role": {
+                    "type": "string",
+                    "example": "role1"
                 }
             }
         }
